--- a/src/components/customComponents/Hero.css
+++ b/src/components/customComponents/Hero.css
@@ -6,7 +6,7 @@
 .greeting{
   font-size: 6rem; /* set font size */
   line-height: 1; /* reset line height */
-  margin-left: 6rem; /* set margin */
+  margin-left: 2rem; /* set margin */
   margin-top: 10rem;
   color: #dbdbdb; /* set text color */
   font-weight: bold; /* set font weight */
@@ -23,22 +23,68 @@
 .aboutme{
   font-size: 2rem; /* set font size */
   line-height: 1; /* reset line height */
-  margin-left: 6rem; /* set margin */
+  margin-left: 2rem; /* set margin */
   color: #dbdbdb; /* set text color */
   font-weight: bold; /* set font weight */
   text-align: center; /* set text alignment */
-  margin-top: 2rem; /* set margin */
+  margin-top: 1/5rem; /* set margin */
   z-index: 0;
 }
 
 .someinfosection{
   font-size: 1rem; /* set font size */
   line-height: 1.5; /* reset line height */
-  margin-left: 6rem; /* set margin */
+  margin-left: 2rem; /* set margin */
   color: #dbdbdb; /* set text color */; /* set font weight */
   text-align: left; /* set text alignment */
   margin-top: 2rem; /* set margin */
   z-index: 0;
   font-weight: 10;
   width: 50%;
+}
+
+
+.summary{
+  font-size: 1rem; /* set font size */
+  line-height: 1.5; /* reset line height */
+  margin-left: 0rem; /* set margin */
+  color: #dbdbdb; /* set text color */; /* set font weight */
+  text-align: left; /* set text alignment */
+  margin-top: 2rem; /* set margin */
+  z-index: 0;
+  font-weight: 10;
+  width: 90%;
+}
+
+.skills-container{
+  color: #dbdbdb;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-left: 0%;
+}
+
+.skill-card{
+  width: 6rem;
+  height: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  background-color: #222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0.15rem 0.15rem;
+  padding-left: 1;
+}
+
+.skill-card-content{
+  width: 6rem;
+  height: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  background-color: #222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0.15rem 0.15rem;
 }
