--- a/src/components/customComponents/background.css
+++ b/src/components/customComponents/background.css
@@ -1,12 +1,12 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
-  }
+  } */
   section{
-    position: relative;
+    position: ab;
     width: 100%;
     height: 100vh;
-    background: #3586ff;
+    background: #676f9d;
     overflow: hidden;
   }
   section .air{
