--- a/src/App.css
+++ b/src/App.css
@@ -1,64 +1,106 @@
-*{
-    margin: 0;
-    padding: 0;
-  }
-  section{
-    position: relative;
-    width: 100%;
+
+  #textblock {
+    background-color: #210002;
     height: 100vh;
-    background: #3586ff;
-    overflow: hidden;
   }
-  section .air{
-    position: absolute;
-    bottom: 0;
-    left: 0;
+  
+  #textblock-container {
+    width: 50%;
+    margin: 0 auto;
+    padding-top: 70px;
+  }
+  
+  #textblock-title {
+    color: #ffaf1b;
+    font-size: 35px;
+    font-weight: 600;
+    font-family: "Helvetica Neue";
+  }
+  
+  #textblock-content {
+    color: #ffaf1b;
+    font-size: 20px;
+  }
+  
+  #textblock-footer {
+    color: #ffaf1b;
+    font-size: 15px;
+    font-weight: 400;
+    position: fixed;
     width: 100%;
-    height: 100px;
-    background: url(https://1.bp.blogspot.com/-xQUc-TovqDk/XdxogmMqIRI/AAAAAAAACvI/AizpnE509UMGBcTiLJ58BC6iViPYGYQfQCLcBGAsYHQ/s1600/wave.png);
-    background-size: 1000px 100px
+    bottom: 0px;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    margin-bottom: 20px;
+  
   }
-  section .air.air1{
-    animation: wave 30s linear infinite;
-    z-index: 1000;
-    opacity: 1;
-    animation-delay: 0s;
-    bottom: 0;
+  
+  #textblock-devsense {
+    text-decoration: none;
+    color: #ffaf1b;
+    font-size: 15px;
+    font-weight: 600;
   }
-  section .air.air2{
-    animation: wave2 15s linear infinite;
-    z-index: 999;
-    opacity: 0.5;
-    animation-delay: -5s;
-    bottom: 10px;
+  
+  .animation, .animation_layer {
+    height: 1200px;
   }
-  section .air.air3{
-    animation: wave 30s linear infinite;
-    z-index: 998;
-    opacity: 0.2;
-    animation-delay: -2s;
-    bottom: 15px;
+  
+  .animation {
+    display: block;
+    position: relative;
+    z-index: 10;
   }
-  section .air.air4{
-    animation: wave2 5s linear infinite;
-    z-index: 997;
-    opacity: 0.7;
-    animation-delay: -5s;
-    bottom: 20px;
+  
+  .animation_layer {
+    background-position: bottom center;
+    background-size: auto 1038px;
+    background-repeat: repeat-x;
+    width: 100%;
+    /* height: 100vh; */
+    position: relative;
   }
-  @keyframes wave{
-    0%{
-      background-position-x: 0px; 
-    }
-    100%{
-      background-position-x: 1000px; 
-    }
+  .animation_layer.parallax {
+    position: fixed;
+    
   }
-  @keyframes wave2{
-    0%{
-      background-position-x: 0px; 
-    }
-    100%{
-      background-position-x: -1000px; 
-    }
+  
+  #artback {
+    background-image: url(background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed; }
+  
+  #mountain {
+    background-image: url(/mountains.png);
+  }
+  
+  #logoland {
+    background-image: url(/logo_land.png);
+  }
+  
+  #jungle1 {
+    background-image: url(/jungle1.png);
+  }
+  
+  #jungle2 {
+    background-image: url(/jungle2.png);
+  }
+  
+  #jungle3 {
+    background-image: url(/jungle3.png);
+  }
+  
+  #jungle4 {
+    background-image: url(/jungle4.png);
+  }
+  
+  #jungle5 {
+    background-image: url(/jungle5.png);
+  }
+  
+  #manonmountain {
+    background-image: url(/man_on_mountain.png);
   }
