--- a/src/components/customComponents/Hero.css
+++ b/src/components/customComponents/Hero.css
@@ -150,12 +150,13 @@
   width: 4.5rem;
   height: 1.8rem;
   border-radius: 1rem;
-  background-color: #676f9d;
+  background-color: #90565671;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0.15rem 0.15rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+
 
   @media (max-width: 768px) {
     width: 2.5rem;
