--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
   }
   
   #artback {
-    background-image: url(/background2.png);
+    background-image: url(/background.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
