--- a/src/components/customComponents/ExperienceCard.css
+++ b/src/components/customComponents/ExperienceCard.css
@@ -1,12 +1,12 @@
 .card {
-    background: rgba(255, 0, 0, 0.1); /* Transparent background */
+    background: #00000050; /* Transparent background */
     border: 1px solid rgba(255, 255, 255, 0.3); /* Border on all sides */
     padding: 20px; /* Padding for better spacing */
     border-radius: 10px; /* Rounded corners */
     margin-bottom: 20px; /* Space between cards */
-    margin-right: 10%;
+    margin-right: 1%;
     justify-content: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transitions */
     transform: translateY(-15px); /* Slight lift on hover */
     box-shadow: 0 8px 10px rgba(0, 0, 0, 0.15); /* Enhanced shadow on hover */
@@ -24,7 +24,7 @@
   
   @media (max-width: 600px) {
     .card {
-      padding: 10px; /* Smaller padding on mobile */
+      padding: 5px; /* Smaller padding on mobile */
       margin-left: 10;
     }
   
