--- a/src/components/customComponents/ExperienceCard.css
+++ b/src/components/customComponents/ExperienceCard.css
@@ -2,11 +2,13 @@
     background: #00000050; /* Transparent background */
     border: 1px solid rgba(255, 255, 255, 0.3); /* Border on all sides */
     padding: 20px; /* Padding for better spacing */
+    max-width: 180vh;
+    width: 190vh;
+    width: 190vh;
     border-radius: 10px; /* Rounded corners */
     margin-bottom: 20px; /* Space between cards */
     margin-right: 1%;
     justify-content: center;
-box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transitions */
     transform: translateY(-15px); /* Slight lift on hover */
     box-shadow: 0 8px 10px rgba(0, 0, 0, 0.15); /* Enhanced shadow on hover */
@@ -14,6 +16,7 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30p
   
   .card:hover {
     transform: translateY(-5px); /* Slight lift on hover */
+    
     box-shadow: 0 8px 10px rgba(0, 0, 0, 0.15); /* Enhanced shadow on hover */
   }
   
@@ -26,6 +29,8 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30p
     .card {
       padding: 5px; /* Smaller padding on mobile */
       margin-left: 10;
+      max-width: 80vh;
+      width: 35vh;
     }
   
     .card .flex {
@@ -37,4 +42,30 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30p
       margin-right: 10;
     }
   }
+
+  .info-company {
+    color: #b053e5;
+    font-size: 0.7rem; /* Equivalent to text-xs */
+    white-space: pre-wrap;
+    font-weight: 500;
+    word-wrap: break-word;
+    width: 100%; /* Adjust width as needed */
+    max-width: 150px; /* Fixed max-width for better alignment */
+    margin: 5px 10px; /* Margin for spacing */
+  }
   
+  .info-text {
+    color: white;
+    font-size: 0.7rem; /* Equivalent to text-xs */
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    width: 100%; /* Adjust width as needed */
+    max-width: 150px; /* Fixed max-width for better alignment */
+    margin: 5px 10px; /* Margin for spacing */
+  }
+  
+  .duration-text {
+    color: white;
+    /* font-family: 'sans-serif'; */
+    font-size: 0.75rem; /* Equivalent to text-xs */
+  }
